Cleaning up and flake8ing

--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <p>Question: {{ question.text }} </p>
+    <p>Question: <h1> {{ question.text }}</h1> </p>
 </div>
 
 {% if question.answers %}
