--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <p>Welcome to quiz land</p>
+    <p><h1>Welcome to Quiz Master</h1></p>
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
